<resources>
    <string name="app_name">Halo</string>
    <string name="device_name">Device Name</string>
    <string name="auto_start">Autostart</string>
    <string name="autostart_summary">Start Halo at system startup</string>
    <string name="settings_heading">Settings</string>
    <string name="ha_address_key">HomeAssistant domain or IP address</string>
    <string name="ha_address">HomeAssistant domain or IP address</string>
    <string name="ha_address_summary">HomeAssistant domain or IP address</string>
    <string name="ha_address_default">https://example.duckdns.org</string>

    <string name="ha_port">HomeAssistant Port(Default is 443)</string>
    <string name="ha_port_default">443</string>
    <string name="ha_access_token">HomeAssistant Long-lived token</string>
    <string name="enable_tracking">Enable Tracking</string>
    <string name="enable_tracking_summary">Send location data to HA through MQTT</string>

    <string name="device_name_summary">This will appear as device_tracker on HA</string>
    <string name="mqtt_address">MQTT Server address</string>
    <string name="mqtt_address_summary">ex: example.duckdns.org</string>
    <string name="mqtt_address_default">example.duckdns.org</string>
    <string name="mqtt_port_default">1883</string>
    <string name="mqtt_user_default">user</string>
    <string name="mqtt_passwd_default">passwd</string>

    <string name="locaton_distance_default">10</string>
    <string name="locaton_heartbeat_default">120</string>

    <string name="permission_rationale">All the time location permission required for core functionality</string>
    <string name="permission_denied_explanation">All the time location permission denied; needed for the app
        functionality.</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="tab_log_title">Log</string>
    <string name="button_reload">Reload</string>
    <string name="button_clear">Clear</string>
    <string name="button_export">Export</string>
    <string name="toast_no_logs">No logs available</string>
    <string name="tab_licenses_title">Licenses</string>
</resources>
